--- a/.env.example
+++ b/.env.example
@@ -12,4 +12,7 @@ TELEGRAM_CHAT_ID=
 # Optional: Sentry DSN (for app and n8n webhooks)
 # SENTRY_DSN=
 
+# Notion: after creating Delivery Hub root page and sharing with integration, set for scripts/notion-create-delivery-hub-structure.sh
+# NOTION_DELIVERY_HUB_PAGE_ID=
+
 # Copy to .env and fill; never commit .env
