chore: AGENTS.md, docs (status-summary, Phase 2 Notion, MCP howto), Quick Links, archive, health-check
- AGENTS.md: structured context block (project, state, read/do, rules)
- docs: status-summary, README, NEXT-STEPS, current-phase; archive moved docs
- Notion Phase 2: first spec + ADR + Quick Links (via MCP)
- mcp-enable-howto: why Linear/Telegram show Error, fix steps
- scripts: health-check-env.sh, get-telegram-chat-id.sh
- Sentry SDK in src/instrument.js

Made-with: Cursor

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,7 @@ TELEGRAM_CHAT_ID=
 # n8n (when running via script; or set in n8n UI Credentials)
 # N8N_BASIC_AUTH_USER=
 # N8N_BASIC_AUTH_PASSWORD=
+# N8N_API_KEY=   # optional: for calling n8n API from scripts (keyring: server n8n, user aipipeline-api)
 
 # Optional: Sentry DSN (for app and n8n webhooks)
 # SENTRY_DSN=
