docs: audit — day0-runbook to archive, fix links, unify index
- Move docs/day0-runbook.md to docs/archive/day0-runbook.md (Day-0 done)
- Update all references to archive/day0-runbook in docs, README, CLAUDE.md
- docs/README: add main nav (status, NEXT-STEPS, AGENTS), refresh next steps
- docs/archive/README: add day0-runbook and AIP-1…AIP-8 done entries
- status-summary: Verify row PR #10, #12–#19 (AIP-1…AIP-8)
- Phase 4: scripts (ngrok, wf updates, register-sentry, linear-apply-labels),
  runbooks (linear-phase3, next-steps-step-by-step, what-to-do-manually),
  n8n-workflows/, healthServer, health tests

Made-with: Cursor

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
+# App: set PORT to run health HTTP server (GET /health, GET /status). Default 3000 when PORT set.
+# PORT=3000
+# N8N_URL=http://localhost:5678   # optional; used by GET /status to ping n8n
+
 # MCP (Cursor / Claude Code) — set before starting Cursor so ${env:VAR} in .cursor/mcp.json works
 NOTION_TOKEN=
 GITHUB_PERSONAL_ACCESS_TOKEN=
