--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "AI-native delivery pipeline scaffold",
   "private": true,
   "scripts": {
+    "start": "node src/index.js",
     "lint": "node -e \"require('./src/index')\"",
     "build": "node -e \"require('./src/index')\"",
-    "test": "node tests/smoke.test.js",
+    "test": "node tests/smoke.test.js && node tests/health.test.js",
     "status": "./scripts/health-check-env.sh"
   },
   "engines": {
