chore: alpha release prep — version 0.1.0-alpha.1, releases doc, runbook and NEXT-STEPS
Made-with: Cursor

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aipipeline",
-  "version": "0.1.0",
+  "version": "0.1.0-alpha.1",
   "description": "AI-native delivery pipeline scaffold",
   "private": true,
   "scripts": {
