AIP-11: add WF-3 LLM severity classification and webhook automation

--- a/.env.example
+++ b/.env.example
@@ -27,6 +27,10 @@ TELEGRAM_CHAT_ID=
 # SENTRY_ORG_SLUG=
 # SENTRY_PROJECT_SLUG=
 
+# Optional: LLM classification for WF-3
+# OPENAI_API_KEY=
+# OPENAI_MODEL=gpt-4o-mini
+
 # Notion: after creating Delivery Hub root page and sharing with integration, set for scripts/notion-create-delivery-hub-structure.sh
 # NOTION_DELIVERY_HUB_PAGE_ID=
 # NOTION_SPRINT_LOG_DATABASE_ID=
