--- a/package.json
+++ b/package.json
@@ -5,15 +5,33 @@
   "private": true,
   "scripts": {
     "start": "node src/index.js",
-    "lint": "node -e \"require('./src/index')\"",
-    "build": "node -e \"require('./src/index')\"",
-    "test": "node tests/smoke.test.js && node tests/health.test.js",
+    "lint": "eslint .",
+    "format": "prettier --check .",
+    "format:fix": "prettier --write .",
+    "typecheck": "tsc -p tsconfig.json --noEmit",
+    "build": "npm run typecheck",
+    "test": "vitest run",
+    "coverage": "vitest run --coverage",
     "status": "./scripts/health-check-env.sh"
   },
   "engines": {
     "node": ">=22"
   },
   "dependencies": {
-    "@sentry/node": "^10.40.0"
+    "@sentry/node": "^10.40.0",
+    "zod": "^4.1.11"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.39.1",
+    "@types/node": "^24.7.2",
+    "@typescript-eslint/eslint-plugin": "^8.46.1",
+    "@typescript-eslint/parser": "^8.46.1",
+    "@vitest/coverage-v8": "^3.2.4",
+    "eslint": "^9.39.1",
+    "eslint-config-prettier": "^10.1.8",
+    "globals": "^17.3.0",
+    "prettier": "^3.6.2",
+    "typescript": "^5.9.3",
+    "vitest": "^3.2.4"
   }
 }
