--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -82,7 +82,7 @@ jobs:
           }
           JSON
           )
-          curl -fsSL -X POST "$DEPLOY_WEBHOOK_PRODUCTION" \
+          curl -fsSL --retry 3 --retry-all-errors --retry-delay 5 --connect-timeout 10 --max-time 30 -X POST "$DEPLOY_WEBHOOK_PRODUCTION" \
             -H "Content-Type: application/json" \
             ${DEPLOY_WEBHOOK_TOKEN_PRODUCTION:+-H "Authorization: Bearer $DEPLOY_WEBHOOK_TOKEN_PRODUCTION"} \
             -d "$PAYLOAD"
