--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -79,7 +79,7 @@ jobs:
           }
           JSON
           )
-          curl -fsSL -X POST "$DEPLOY_WEBHOOK_STAGING" \
+          curl -fsSL --retry 3 --retry-all-errors --retry-delay 5 --connect-timeout 10 --max-time 30 -X POST "$DEPLOY_WEBHOOK_STAGING" \
             -H "Content-Type: application/json" \
             ${DEPLOY_WEBHOOK_TOKEN_STAGING:+-H "Authorization: Bearer $DEPLOY_WEBHOOK_TOKEN_STAGING"} \
             -d "$PAYLOAD"
