--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "typecheck": "tsc -p tsconfig.json --noEmit",
     "build": "npm run typecheck",
     "test": "vitest run",
+    "test:integration": "vitest run tests/integration",
     "coverage": "vitest run --coverage",
     "status": "./scripts/health-check-env.sh"
   },
