ops: add release gate, parity check, and n8n backup tooling

--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "test:integration": "vitest run tests/integration",
     "test:e2e": "vitest run tests/e2e",
     "eval:alpha": "node scripts/run-ai-eval.js --dataset evals/datasets/sentry-severity-alpha.json --model-tag alpha-heuristic-v1 --fail-on-gate",
+    "ops:backup-n8n": "./scripts/backup-n8n.sh",
+    "ops:parity-check": "./scripts/check-env-parity.sh",
+    "release:gate": "./scripts/release-quality-gate.sh",
     "coverage": "vitest run --coverage",
     "status": "./scripts/health-check-env.sh"
   },
